Added: sound for coming feed

--- a/dayTraderHelper/dayTraderHelper.csproj
+++ b/dayTraderHelper/dayTraderHelper.csproj
@@ -172,6 +172,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Sounds\Evil_laugh_Male_9-Himan-1598312646.wav" />
+    <Content Include="Content\Sounds\Train.wav" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
