--- a/dayTraderHelper/dayTraderHelper.csproj
+++ b/dayTraderHelper/dayTraderHelper.csproj
@@ -178,6 +178,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\ajax\ebiData.js" />
+    <Content Include="Scripts\ajax\espiData.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
